Bug 149985 - FILEOPEN PPTX: Impress crashes opening a one-slide presentation (with a chart)
Summary: FILEOPEN PPTX: Impress crashes opening a one-slide presentation (with a chart)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-07-13 21:31 UTC by Gerald Pfeifer
Modified: 2022-07-19 17:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By: Noel Grandin


Attachments
Sample slide (PPTX)u (1.51 MB, application/vnd.ms-powerpoint)
2022-07-13 21:31 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-07-13 21:31:43 UTC
Created attachment 181256 [details]
Sample slide (PPTX)u

Trying to open the sample PPTX presentation Impress consistently crashes
with

  Read error.
  Error reading file.

Seen with:

  Version: 7.5.0.0.alpha0+ / LibreOffice Community
  Build ID: a93d7e7df6804cd6f1f2fa1ef0e6e95ce6c3752a
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

This is a recent regression. Not seen with:

  Version: 7.4.0.0.alpha1+ / LibreOffice Community
  Build ID: b2467d6c7af988f8ed4e090ebf9472be6c84fb06
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

all the way back to 6.4.8.0.0.
Comment 1 Xisco Faulí 2022-07-14 08:17:52 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2022-06-21 13:17:09 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2022-06-27 11:32:42 +0200
commit 04073c5fedd33654f242fecb7e39afb07cf0e273 (patch)
tree 467852ad2c7ca41b90c89eff2b6c9e4ae5544617
parent 5b21b65572610df88986e700b81f1156aff14f65 (diff)
replace oox::OptValue with std::optional

Bisected with: bibisect-linux64-7.5

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2022-07-14 11:19:02 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/310a787e1b03ba6d9c99996dfbd380296a8da825

tdf#149985 pptx crash on a one-slide presentation (with a chart)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gerald Pfeifer 2022-07-17 06:20:02 UTC
Thank you for the bisection, Xisco, and the quick fix, Noel!

Verified as fixed with

  Version: 7.5.0.0.alpha0+ / LibreOffice Community
  Build ID: ce29e6299932fc079b05b60662ba95c8342990bc
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US


Interestingly enough, the original document triggering this regression
is the one behind https://gerrit.libreoffice.org/c/core/+/109161 , if
with a different root cause.
Comment 4 Gerald Pfeifer 2022-07-17 06:22:07 UTC
Actually, one thing Noel: Are you planning to also add a regression
testcase?
Comment 5 Xisco Faulí 2022-07-18 10:21:49 UTC
(In reply to Gerald Pfeifer from comment #4)
> Actually, one thing Noel: Are you planning to also add a regression
> testcase?

I'll do it
Comment 6 Commit Notification 2022-07-19 17:49:20 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/93b07a377b93875b28464546f1292e4aa5f9e17d

tdf#149985: sd_import_tests2: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.