tdf#149985 pptx crash on a one-slide presentation (with a chart)

regression from
    commit 04073c5fedd33654f242fecb7e39afb07cf0e273
    Date:   Tue Jun 21 13:17:09 2022 +0200
    replace oox::OptValue with std::optional

Change-Id: I830713495ca04771433018f1091faadf0f6bd71e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137051
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>